# paste2

./: Cargo.toml  README.md
src/: lib.rs  segment.rs
tests/: test_attr.rs  test_doc.rs  test_expr.rs  test_item.rs
tests/ui/: case-warning.rs  env-empty.rs  env-non-string.rs  env-suffix.rs  env-unexpected.rs  invalid-ident.rs  missing-paren-on-env.rs  no-env-var.rs  no-ident-after-colon.rs  unexpected-group.rs  unexpected-modifier.rs  unexpected-punct.rs  unsupported-literal.rs  unsupported-modifier.rs
