[package]
name = "paste2"
version = "1.1.1"
authors = [
    "David Tolnay <dtolnay@gmail.com>",
    "Juliette Cordor <me@cordor.dev>",
]
categories = ["development-tools", "no-std", "no-std::no-alloc"]
description = "Macros for all your token pasting needs"
documentation = "https://docs.rs/paste2"
edition = "2018"
keywords = ["macros"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/winpax/paste2"
rust-version = "1.31"

[lib]
proc-macro = true

[dev-dependencies]
paste-test-suite = { version = "0", path = "tests/macros" }
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
